--- a/test-output/Test_Report.html
+++ b/test-output/Test_Report.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Food @ Workplace API Automation Test Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Apr 26, 2022 12:07:34 PM</span></a>
+<a href="#"><span class="badge badge-primary">Apr 27, 2022 09:52:16 AM</span></a>
 </li>
 </ul>
 </div>
@@ -79,9 +79,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">Get order details Test</p>
+            <p class="name">get employee order details</p>
             <p class="text-sm">
-              <span>12:07:43 PM</span> / <span>00:00:00:023</span>
+              <span>9:52:21 AM</span> / <span>00:00:00:010</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -89,10 +89,10 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">Get order details Test</h5>
-<span class='badge badge-success'>04.26.2022 12:07:43 PM</span>
-<span class='badge badge-danger'>04.26.2022 12:07:43 PM</span>
-<span class='badge badge-default'>00:00:00:023</span>
+<h5 class="test-status text-pass">get employee order details</h5>
+<span class='badge badge-success'>04.27.2022 9:52:21 AM</span>
+<span class='badge badge-danger'>04.27.2022 9:52:21 AM</span>
+<span class='badge badge-default'>00:00:00:010</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,14 +104,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:07:43 PM</td>
+        <td>9:52:21 AM</td>
         <td>
           Assertion validated.
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:07:43 PM</td>
+        <td>9:52:21 AM</td>
         <td>
           Assertion validated.
         </td>
@@ -135,13 +135,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Apr 26, 2022 12:07:34 PM</h3>
+<h3>Apr 27, 2022 09:52:16 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Apr 26, 2022 12:07:43 PM</h3>
+<h3>Apr 27, 2022 09:52:21 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -211,7 +211,7 @@
 </div></div>
 <script>
 var timeline = {
-"Get order details Test":0.023
+"get employee order details":0.01
 };
 </script>
 <div class="row">
@@ -221,22 +221,6 @@ var timeline = {
 <div class="card-body pb-0 pt-0"><table class="table table-sm table-bordered">
 <thead><tr class="bg-gray"><th>Name</th><th>Value</th></tr></thead>
 <tbody>
-<tr>
-<td>Organization</td>
-<td>Food @ Workplace</td>
-</tr>
-<tr>
-<td>Operating System</td>
-<td>Windows 10</td>
-</tr>
-<tr>
-<td>Application</td>
-<td>Food @ Workplace</td>
-</tr>
-<tr>
-<td>Created by </td>
-<td>Om Chaithanya , Manideep, Navneet, Nara Tharun kumar, Neeraj </td>
-</tr>
 <tr>
 <td>Organization</td>
 <td>Food @ Workplace</td>
