extent report system info repetition bug fixed.

--- a/test-output/Test_Report.html
+++ b/test-output/Test_Report.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Food @ Workplace API Automation Test Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Apr 27, 2022 11:05:53 AM</span></a>
+<a href="#"><span class="badge badge-primary">Apr 27, 2022 05:32:08 PM</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">Admin Create Test</p>
             <p class="text-sm">
-              <span>11:05:56 AM</span> / <span>00:00:00:009</span>
+              <span>5:32:14 PM</span> / <span>00:00:00:031</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Admin Create Test</h5>
-<span class='badge badge-success'>04.27.2022 11:05:56 AM</span>
-<span class='badge badge-danger'>04.27.2022 11:05:56 AM</span>
-<span class='badge badge-default'>00:00:00:009</span>
+<span class='badge badge-success'>04.27.2022 5:32:14 PM</span>
+<span class='badge badge-danger'>04.27.2022 5:32:14 PM</span>
+<span class='badge badge-default'>00:00:00:031</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,14 +104,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:05:56 AM</td>
+        <td>5:32:14 PM</td>
         <td>
           Assertion validated.
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:05:56 AM</td>
+        <td>5:32:14 PM</td>
         <td>
           Assertion validated.
         </td>
@@ -128,7 +128,7 @@
           <div class="test-detail">
             <p class="name">Admin Login Test</p>
             <p class="text-sm">
-              <span>11:05:56 AM</span> / <span>00:00:00:004</span>
+              <span>5:32:15 PM</span> / <span>00:00:00:007</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -137,9 +137,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Admin Login Test</h5>
-<span class='badge badge-success'>04.27.2022 11:05:56 AM</span>
-<span class='badge badge-danger'>04.27.2022 11:05:56 AM</span>
-<span class='badge badge-default'>00:00:00:004</span>
+<span class='badge badge-success'>04.27.2022 5:32:15 PM</span>
+<span class='badge badge-danger'>04.27.2022 5:32:15 PM</span>
+<span class='badge badge-default'>00:00:00:007</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -151,14 +151,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:05:56 AM</td>
+        <td>5:32:15 PM</td>
         <td>
           Assertion validated.
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:05:56 AM</td>
+        <td>5:32:15 PM</td>
         <td>
           Assertion validated.
         </td>
@@ -175,7 +175,7 @@
           <div class="test-detail">
             <p class="name">User Login Test</p>
             <p class="text-sm">
-              <span>11:05:57 AM</span> / <span>00:00:00:004</span>
+              <span>5:32:17 PM</span> / <span>00:00:00:004</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -184,8 +184,8 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">User Login Test</h5>
-<span class='badge badge-success'>04.27.2022 11:05:57 AM</span>
-<span class='badge badge-danger'>04.27.2022 11:05:57 AM</span>
+<span class='badge badge-success'>04.27.2022 5:32:17 PM</span>
+<span class='badge badge-danger'>04.27.2022 5:32:17 PM</span>
 <span class='badge badge-default'>00:00:00:004</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
@@ -198,14 +198,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:05:57 AM</td>
+        <td>5:32:17 PM</td>
         <td>
           Assertion validated.
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:05:57 AM</td>
+        <td>5:32:17 PM</td>
         <td>
           Assertion validated.
         </td>
@@ -222,7 +222,7 @@
           <div class="test-detail">
             <p class="name">Verify Password</p>
             <p class="text-sm">
-              <span>11:05:58 AM</span> / <span>00:00:00:002</span>
+              <span>5:32:18 PM</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -231,9 +231,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Verify Password</h5>
-<span class='badge badge-success'>04.27.2022 11:05:58 AM</span>
-<span class='badge badge-danger'>04.27.2022 11:05:58 AM</span>
-<span class='badge badge-default'>00:00:00:002</span>
+<span class='badge badge-success'>04.27.2022 5:32:18 PM</span>
+<span class='badge badge-danger'>04.27.2022 5:32:18 PM</span>
+<span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -245,14 +245,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:05:58 AM</td>
+        <td>5:32:18 PM</td>
         <td>
           Assertion validated.
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:05:58 AM</td>
+        <td>5:32:18 PM</td>
         <td>
           Assertion validated.
         </td>
@@ -269,7 +269,7 @@
           <div class="test-detail">
             <p class="name">Check Email</p>
             <p class="text-sm">
-              <span>11:05:58 AM</span> / <span>00:00:00:003</span>
+              <span>5:32:18 PM</span> / <span>00:00:00:003</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -278,8 +278,8 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Check Email</h5>
-<span class='badge badge-success'>04.27.2022 11:05:58 AM</span>
-<span class='badge badge-danger'>04.27.2022 11:05:58 AM</span>
+<span class='badge badge-success'>04.27.2022 5:32:18 PM</span>
+<span class='badge badge-danger'>04.27.2022 5:32:18 PM</span>
 <span class='badge badge-default'>00:00:00:003</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=5</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
@@ -292,14 +292,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:05:58 AM</td>
+        <td>5:32:18 PM</td>
         <td>
           Assertion validated.
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:05:58 AM</td>
+        <td>5:32:18 PM</td>
         <td>
           Assertion validated.
         </td>
@@ -316,7 +316,7 @@
           <div class="test-detail">
             <p class="name">Send OTP</p>
             <p class="text-sm">
-              <span>11:06:00 AM</span> / <span>00:00:00:004</span>
+              <span>5:32:20 PM</span> / <span>00:00:00:001</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -325,9 +325,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Send OTP</h5>
-<span class='badge badge-success'>04.27.2022 11:06:00 AM</span>
-<span class='badge badge-danger'>04.27.2022 11:06:00 AM</span>
-<span class='badge badge-default'>00:00:00:004</span>
+<span class='badge badge-success'>04.27.2022 5:32:20 PM</span>
+<span class='badge badge-danger'>04.27.2022 5:32:20 PM</span>
+<span class='badge badge-default'>00:00:00:001</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=6</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -339,14 +339,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:06:00 AM</td>
+        <td>5:32:20 PM</td>
         <td>
           Assertion validated.
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:06:00 AM</td>
+        <td>5:32:20 PM</td>
         <td>
           Assertion validated.
         </td>
@@ -363,7 +363,7 @@
           <div class="test-detail">
             <p class="name">Verify OTP</p>
             <p class="text-sm">
-              <span>11:06:00 AM</span> / <span>00:00:00:000</span>
+              <span>5:32:21 PM</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -372,8 +372,8 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Verify OTP</h5>
-<span class='badge badge-success'>04.27.2022 11:06:00 AM</span>
-<span class='badge badge-danger'>04.27.2022 11:06:00 AM</span>
+<span class='badge badge-success'>04.27.2022 5:32:21 PM</span>
+<span class='badge badge-danger'>04.27.2022 5:32:21 PM</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=7</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
@@ -389,7 +389,7 @@
           <div class="test-detail">
             <p class="name">Post Token</p>
             <p class="text-sm">
-              <span>11:06:01 AM</span> / <span>00:00:00:000</span>
+              <span>5:32:22 PM</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -398,8 +398,8 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Post Token</h5>
-<span class='badge badge-success'>04.27.2022 11:06:01 AM</span>
-<span class='badge badge-danger'>04.27.2022 11:06:01 AM</span>
+<span class='badge badge-success'>04.27.2022 5:32:22 PM</span>
+<span class='badge badge-danger'>04.27.2022 5:32:22 PM</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=8</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
@@ -422,13 +422,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Apr 27, 2022 11:05:53 AM</h3>
+<h3>Apr 27, 2022 05:32:08 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Apr 27, 2022 11:06:01 AM</h3>
+<h3>Apr 27, 2022 05:32:22 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -498,7 +498,7 @@
 </div></div>
 <script>
 var timeline = {
-"Admin Create Test":0.009,"Admin Login Test":0.004,"User Login Test":0.004,"Verify Password":0.002,"Check Email":0.003,"Send OTP":0.004,"Verify OTP":0,"Post Token":0
+"Admin Create Test":0.031,"Admin Login Test":0.007,"User Login Test":0.004,"Verify Password":0,"Check Email":0.003,"Send OTP":0.001,"Verify OTP":0,"Post Token":0
 };
 </script>
 <div class="row">
@@ -508,118 +508,6 @@ var timeline = {
 <div class="card-body pb-0 pt-0"><table class="table table-sm table-bordered">
 <thead><tr class="bg-gray"><th>Name</th><th>Value</th></tr></thead>
 <tbody>
-<tr>
-<td>Organization</td>
-<td>Food @ Workplace</td>
-</tr>
-<tr>
-<td>Operating System</td>
-<td>Windows 10</td>
-</tr>
-<tr>
-<td>Application</td>
-<td>Food @ Workplace</td>
-</tr>
-<tr>
-<td>Created by </td>
-<td>Om Chaithanya , Manideep, Navneet, Nara Tharun kumar, Neeraj </td>
-</tr>
-<tr>
-<td>Organization</td>
-<td>Food @ Workplace</td>
-</tr>
-<tr>
-<td>Operating System</td>
-<td>Windows 10</td>
-</tr>
-<tr>
-<td>Application</td>
-<td>Food @ Workplace</td>
-</tr>
-<tr>
-<td>Created by </td>
-<td>Om Chaithanya , Manideep, Navneet, Nara Tharun kumar, Neeraj </td>
-</tr>
-<tr>
-<td>Organization</td>
-<td>Food @ Workplace</td>
-</tr>
-<tr>
-<td>Operating System</td>
-<td>Windows 10</td>
-</tr>
-<tr>
-<td>Application</td>
-<td>Food @ Workplace</td>
-</tr>
-<tr>
-<td>Created by </td>
-<td>Om Chaithanya , Manideep, Navneet, Nara Tharun kumar, Neeraj </td>
-</tr>
-<tr>
-<td>Organization</td>
-<td>Food @ Workplace</td>
-</tr>
-<tr>
-<td>Operating System</td>
-<td>Windows 10</td>
-</tr>
-<tr>
-<td>Application</td>
-<td>Food @ Workplace</td>
-</tr>
-<tr>
-<td>Created by </td>
-<td>Om Chaithanya , Manideep, Navneet, Nara Tharun kumar, Neeraj </td>
-</tr>
-<tr>
-<td>Organization</td>
-<td>Food @ Workplace</td>
-</tr>
-<tr>
-<td>Operating System</td>
-<td>Windows 10</td>
-</tr>
-<tr>
-<td>Application</td>
-<td>Food @ Workplace</td>
-</tr>
-<tr>
-<td>Created by </td>
-<td>Om Chaithanya , Manideep, Navneet, Nara Tharun kumar, Neeraj </td>
-</tr>
-<tr>
-<td>Organization</td>
-<td>Food @ Workplace</td>
-</tr>
-<tr>
-<td>Operating System</td>
-<td>Windows 10</td>
-</tr>
-<tr>
-<td>Application</td>
-<td>Food @ Workplace</td>
-</tr>
-<tr>
-<td>Created by </td>
-<td>Om Chaithanya , Manideep, Navneet, Nara Tharun kumar, Neeraj </td>
-</tr>
-<tr>
-<td>Organization</td>
-<td>Food @ Workplace</td>
-</tr>
-<tr>
-<td>Operating System</td>
-<td>Windows 10</td>
-</tr>
-<tr>
-<td>Application</td>
-<td>Food @ Workplace</td>
-</tr>
-<tr>
-<td>Created by </td>
-<td>Om Chaithanya , Manideep, Navneet, Nara Tharun kumar, Neeraj </td>
-</tr>
 <tr>
 <td>Organization</td>
 <td>Food @ Workplace</td>
